# pyWebpower

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: linter.yml
test/: test_power_tests.py
webpower/: __init__.py  anova_classes.py  misc_classes.py  power_tests.py  proportion_classes.py  randomized_trial_classes.py  regression_classes.py  sem_classes.py  t_test_classes.py  utils.py
