[project]
name = "pywebpower"
version = "0.1.0"
description = "A Python implementation of the Webpower R library"
authors = [
    {name = "ConorMcNamara",email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.15.2,<2.0.0",
    "numpy>=2.2.4,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.0.0",
]

[tool.poetry]
packages = [{include = "webpower"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["webpower", '.']

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.zuban]
python_version = "3.13"
warn_return_any = true
warn_unreachable = true
exclude_gitignore = true
allow_untyped_globals = false
disallow_untyped_defs = true
mode = "default"  # Or "mypy"

# Recommended (and the default) for untyped code
untyped_strict_optional = true

# Mypy's default is "any", Zuban's "inferred"
untyped_function_return_mode = "inferred"
